# asyncwrap

./: .pre-commit-config.yaml  Cargo.toml  README.md  SPEC.md  devenv.nix
.github/workflows/: ci.yml
asyncwrap/: Cargo.toml
asyncwrap-macros/: Cargo.toml
asyncwrap-macros/src/: lib.rs
asyncwrap/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/ui/: async_method.rs  async_method.stderr  invalid_strategy.rs  invalid_strategy.stderr  move_self.rs  move_self.stderr  multiple_errors.rs  multiple_errors.stderr  mut_self.rs  mut_self.stderr  no_self.rs  no_self.stderr  non_send_arg.rs  non_send_arg.stderr
